k8s/06-injector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crave-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crave-injector
  template:
    metadata:
      labels:
        app: crave-injector
    spec:
      containers:
        - name: injector
          image: crave-injector:latest
          imagePullPolicy: IfNotPresent
