k8s/03-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crave-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crave-redis
  template:
    metadata:
      labels:
        app: crave-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: crave-redis
spec:
  selector:
    app: crave-redis
  ports:
    - port: 6379
      targetPort: 6379
